--- a/deploy/manifests/BUILD.bazel
+++ b/deploy/manifests/BUILD.bazel
@@ -13,12 +13,14 @@ RELEASE_NAMESPACE = "cert-manager"
 VARIANTS = {
     "cert-manager": {
         "crd_variant": "regular",
+        "additional_api_versions": "",
         "values": {
             "installCRDs": "false",
         },
     },
     "cert-manager-legacy": {
         "crd_variant": "legacy",
+        "additional_api_versions": "hacking-helm.i-wish-this-wasnt-required.cert-manager.io/use-v1beta1-webhooks",
         "values": {
             "installCRDs": "false",
         },
@@ -27,6 +29,7 @@ VARIANTS = {
 
 [helm_tmpl(
     name = "%s.manifests" % name,
+    additional_api_versions = meta["additional_api_versions"],
     helm_pkg = "//deploy/charts/cert-manager",
     release_name = RELEASE_NAME,
     release_namespace = RELEASE_NAMESPACE,
