run update script
Signed-off-by: Q <q@misell.cymru>
Signed-off-by: Q <q@as207690.net>

--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -507,6 +507,8 @@ spec:
                             description: The ingress class to use when creating Ingress
                               resources to solve ACME challenges that use this challenge
                               solver. Only one of 'class' or 'name' may be specified.
+                              A reference by name to a Kubernetes Ingress object (see
+                              doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                             type: string
                           ingressTemplate:
                             description: Optional ingress template used to configure
@@ -539,7 +541,8 @@ spec:
                               in order to solve HTTP01 challenges. This is typically
                               used in conjunction with ingress controllers like ingress-gce,
                               which maintains a 1:1 mapping between external IPs and
-                              ingress resources.
+                              ingress resources. A reference by name to a Kubernetes
+                              Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                             type: string
                           podTemplate:
                             description: Optional pod template used to configure the
@@ -1984,6 +1987,8 @@ spec:
                             description: The ingress class to use when creating Ingress
                               resources to solve ACME challenges that use this challenge
                               solver. Only one of 'class' or 'name' may be specified.
+                              A reference by name to a Kubernetes IngressClass object
+                              (see docs at https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-class)
                             type: string
                           ingressTemplate:
                             description: Optional ingress template used to configure
@@ -2016,7 +2021,8 @@ spec:
                               in order to solve HTTP01 challenges. This is typically
                               used in conjunction with ingress controllers like ingress-gce,
                               which maintains a 1:1 mapping between external IPs and
-                              ingress resources.
+                              ingress resources. A reference by name to a Kubernetes
+                              Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                             type: string
                           podTemplate:
                             description: Optional pod template used to configure the
@@ -3462,6 +3468,8 @@ spec:
                             description: The ingress class to use when creating Ingress
                               resources to solve ACME challenges that use this challenge
                               solver. Only one of 'class' or 'name' may be specified.
+                              A reference by name to a Kubernetes Ingress object (see
+                              doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                             type: string
                           ingressTemplate:
                             description: Optional ingress template used to configure
@@ -3494,7 +3502,8 @@ spec:
                               in order to solve HTTP01 challenges. This is typically
                               used in conjunction with ingress controllers like ingress-gce,
                               which maintains a 1:1 mapping between external IPs and
-                              ingress resources.
+                              ingress resources. A reference by name to a Kubernetes
+                              Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                             type: string
                           podTemplate:
                             description: Optional pod template used to configure the
