--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -579,7 +579,8 @@ spec:
                                   description: The ingress class to use when creating
                                     Ingress resources to solve ACME challenges that
                                     use this challenge solver. Only one of 'class'
-                                    or 'name' may be specified.
+                                    or 'name' may be specified. A reference by name
+                                    to a Kubernetes Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 ingressTemplate:
                                   description: Optional ingress template used to configure
@@ -616,7 +617,8 @@ spec:
                                     is typically used in conjunction with ingress
                                     controllers like ingress-gce, which maintains
                                     a 1:1 mapping between external IPs and ingress
-                                    resources.
+                                    resources. A reference by name to a Kubernetes
+                                    Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 podTemplate:
                                   description: Optional pod template used to configure
@@ -2516,7 +2518,9 @@ spec:
                                   description: The ingress class to use when creating
                                     Ingress resources to solve ACME challenges that
                                     use this challenge solver. Only one of 'class'
-                                    or 'name' may be specified.
+                                    or 'name' may be specified. A reference by name
+                                    to a Kubernetes IngressClass object (see docs
+                                    at https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-class)
                                   type: string
                                 ingressTemplate:
                                   description: Optional ingress template used to configure
@@ -2553,7 +2557,8 @@ spec:
                                     is typically used in conjunction with ingress
                                     controllers like ingress-gce, which maintains
                                     a 1:1 mapping between external IPs and ingress
-                                    resources.
+                                    resources. A reference by name to a Kubernetes
+                                    Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 podTemplate:
                                   description: Optional pod template used to configure
@@ -4455,7 +4460,8 @@ spec:
                                   description: The ingress class to use when creating
                                     Ingress resources to solve ACME challenges that
                                     use this challenge solver. Only one of 'class'
-                                    or 'name' may be specified.
+                                    or 'name' may be specified. A reference by name
+                                    to a Kubernetes Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 ingressTemplate:
                                   description: Optional ingress template used to configure
@@ -4492,7 +4498,8 @@ spec:
                                     is typically used in conjunction with ingress
                                     controllers like ingress-gce, which maintains
                                     a 1:1 mapping between external IPs and ingress
-                                    resources.
+                                    resources. A reference by name to a Kubernetes
+                                    Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 podTemplate:
                                   description: Optional pod template used to configure
