--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -580,7 +580,8 @@ spec:
                                   description: The ingress class to use when creating
                                     Ingress resources to solve ACME challenges that
                                     use this challenge solver. Only one of 'class'
-                                    or 'name' may be specified.
+                                    or 'name' may be specified. A reference by name
+                                    to a Kubernetes Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 ingressTemplate:
                                   description: Optional ingress template used to configure
@@ -617,7 +618,8 @@ spec:
                                     is typically used in conjunction with ingress
                                     controllers like ingress-gce, which maintains
                                     a 1:1 mapping between external IPs and ingress
-                                    resources.
+                                    resources. A reference by name to a Kubernetes
+                                    Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 podTemplate:
                                   description: Optional pod template used to configure
@@ -2518,7 +2520,9 @@ spec:
                                   description: The ingress class to use when creating
                                     Ingress resources to solve ACME challenges that
                                     use this challenge solver. Only one of 'class'
-                                    or 'name' may be specified.
+                                    or 'name' may be specified. A reference by name
+                                    to a Kubernetes IngressClass object (see docs
+                                    at https://kubernetes.io/docs/concepts/services-networking/ingress/#ingress-class)
                                   type: string
                                 ingressTemplate:
                                   description: Optional ingress template used to configure
@@ -2555,7 +2559,8 @@ spec:
                                     is typically used in conjunction with ingress
                                     controllers like ingress-gce, which maintains
                                     a 1:1 mapping between external IPs and ingress
-                                    resources.
+                                    resources. A reference by name to a Kubernetes
+                                    Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 podTemplate:
                                   description: Optional pod template used to configure
@@ -4458,7 +4463,8 @@ spec:
                                   description: The ingress class to use when creating
                                     Ingress resources to solve ACME challenges that
                                     use this challenge solver. Only one of 'class'
-                                    or 'name' may be specified.
+                                    or 'name' may be specified. A reference by name
+                                    to a Kubernetes Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 ingressTemplate:
                                   description: Optional ingress template used to configure
@@ -4495,7 +4501,8 @@ spec:
                                     is typically used in conjunction with ingress
                                     controllers like ingress-gce, which maintains
                                     a 1:1 mapping between external IPs and ingress
-                                    resources.
+                                    resources. A reference by name to a Kubernetes
+                                    Ingress object (see doct at https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
                                   type: string
                                 podTemplate:
                                   description: Optional pod template used to configure
