--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,1 @@
-# Include git version info
-build --workspace_status_command hack/build/print-workspace-status.sh
+#build --workspace_status_command hack/build/print-workspace-status.sh
