Set up for v1 API
Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -72,9 +72,11 @@ filegroup(
         "//pkg/client/listers/acme/v1alpha2:all-srcs",
         "//pkg/client/listers/acme/v1alpha3:all-srcs",
         "//pkg/client/listers/acme/v1beta1:all-srcs",
+        "//pkg/client/listers/acme/v1:all-srcs",
         "//pkg/client/listers/certmanager/v1alpha2:all-srcs",
         "//pkg/client/listers/certmanager/v1alpha3:all-srcs",
         "//pkg/client/listers/certmanager/v1beta1:all-srcs",
+        "//pkg/client/listers/certmanager/v1:all-srcs",
         "//pkg/controller:all-srcs",
         "//pkg/ctl:all-srcs",
         "//pkg/feature:all-srcs",
