--- a/pkg/apis/certmanager/v1/BUILD.bazel
+++ b/pkg/apis/certmanager/v1/BUILD.bazel
@@ -12,10 +12,10 @@ go_library(
         "types_issuer.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/apis/certmanager/v1beta1",
+    importpath = "github.com/jetstack/cert-manager/pkg/apis/certmanager/v1",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/acme/v1beta1:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
