--- a/pkg/client/clientset/versioned/fake/BUILD.bazel
+++ b/pkg/client/clientset/versioned/fake/BUILD.bazel
@@ -10,19 +10,25 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/client/clientset/versioned/fake",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/acme/v1alpha3:go_default_library",
         "//pkg/apis/acme/v1beta1:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha3:go_default_library",
         "//pkg/apis/certmanager/v1beta1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/client/clientset/versioned/typed/acme/v1:go_default_library",
+        "//pkg/client/clientset/versioned/typed/acme/v1/fake:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1alpha2/fake:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1alpha3:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1alpha3/fake:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1beta1:go_default_library",
         "//pkg/client/clientset/versioned/typed/acme/v1beta1/fake:go_default_library",
+        "//pkg/client/clientset/versioned/typed/certmanager/v1:go_default_library",
+        "//pkg/client/clientset/versioned/typed/certmanager/v1/fake:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha2/fake:go_default_library",
         "//pkg/client/clientset/versioned/typed/certmanager/v1alpha3:go_default_library",
