--- a/pkg/internal/apis/certmanager/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/BUILD.bazel
@@ -37,6 +37,7 @@ filegroup(
         ":package-srcs",
         "//pkg/internal/apis/certmanager/fuzzer:all-srcs",
         "//pkg/internal/apis/certmanager/install:all-srcs",
+        "//pkg/internal/apis/certmanager/v1:all-srcs",
         "//pkg/internal/apis/certmanager/v1alpha2:all-srcs",
         "//pkg/internal/apis/certmanager/v1alpha3:all-srcs",
         "//pkg/internal/apis/certmanager/v1beta1:all-srcs",
