--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -40,9 +40,16 @@ featureGates: ""
 
 image:
   repository: quay.io/jetstack/cert-manager-controller
+  # You can manage a registry with
+  # registy: quay.io
+  # repository: jetstack/cert-manager-controller
+
   # Override the image tag to deploy by setting this variable.
   # If no value is set, the chart's appVersion will be used.
   # tag: canary
+
+  # Setting a digest will override any tag
+  # digest: sha256:0e072dddd1f7f8fc8909a2ca6f65e76c5f0d2fcfb8be47935ae3457e8bbceb20
   pullPolicy: IfNotPresent
 
 # Override the namespace used to store DNS provider credentials etc. for ClusterIssuer
@@ -217,9 +224,17 @@ webhook:
 
   image:
     repository: quay.io/jetstack/cert-manager-webhook
+    # You can manage a registry with
+    # registy: quay.io
+    # repository: jetstack/cert-manager-webhook
+
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
     # tag: canary
+
+    # Setting a digest will override any tag
+    # digest: sha256:0e072dddd1f7f8fc8909a2ca6f65e76c5f0d2fcfb8be47935ae3457e8bbceb20
+
     pullPolicy: IfNotPresent
 
   serviceAccount:
@@ -293,9 +308,17 @@ cainjector:
 
   image:
     repository: quay.io/jetstack/cert-manager-cainjector
+    # You can manage a registry with
+    # registy: quay.io
+    # repository: jetstack/cert-manager-cainjector
+
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
     # tag: canary
+
+    # Setting a digest will override any tag
+    # digest: sha256:0e072dddd1f7f8fc8909a2ca6f65e76c5f0d2fcfb8be47935ae3457e8bbceb20
+
     pullPolicy: IfNotPresent
 
   serviceAccount:
