Fix Cluster scope
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/crds/crd-clusterissuers.v1beta1.yaml
+++ b/deploy/crds/crd-clusterissuers.v1beta1.yaml
@@ -39,7 +39,7 @@ spec:
         namespace: '{{ .Release.Namespace }}'
         name: '{{ template "webhook.fullname" . }}'
         path: /convert
-  scope: Namespaced
+  scope: Cluster
   subresources:
     status: {}
   version: v1alpha2
