--- a/deploy/prometheus-mixin/tests.yaml
+++ b/deploy/prometheus-mixin/tests.yaml
@@ -30,7 +30,7 @@ tests:
         impact: We are blind as to whether or not we can alert on certificates expiring
         action: Assuming cert-manager is running, this is likely due to cert-manager not having permission to see certificate CRDs,
           a breaking change in metrics exposed, or some other misconfiguration.
-        dashboard: https://prefix.grafana.example.com/d/TvuRo2iMk/cert-manager
+        dashboard: https://grafana.example.com/d/TvuRo2iMk/cert-manager
 
 # Cert expiry
 - interval: 1m
@@ -51,7 +51,7 @@ tests:
         message: The cert `expired-ingress-cert` is 20d 22h 59m 0s from expiry, it should have renewed over a week ago
         impact: The domain that this cert covers will be unavailable after 20d 22h 59m 0s
         action: Ensure cert-manager is configured correctly, no lets-encrypt rate limits are being hit. To break glass, buy a cert.
-        dashboard: https://prefix.grafana.example.com/d/TvuRo2iMk/cert-manager
+        dashboard: https://grafana.example.com/d/TvuRo2iMk/cert-manager
 
 # Cert not ready
 - interval: 1m
@@ -76,7 +76,7 @@ tests:
         impact: This certificate has not been ready to serve traffic for at least 10m. If the cert is being renewed or there is another valid cert,
           nginx _may_ be able to serve that instead.
         action: Ensure cert-manager is configured correctly, no lets-encrypt rate limits are being hit. To break glass, buy a cert.
-        dashboard: https://prefix.grafana.example.com/d/TvuRo2iMk/cert-manager
+        dashboard: https://grafana.example.com/d/TvuRo2iMk/cert-manager
     - exp_labels:
         severity: critical
         exported_namespace: test
@@ -87,7 +87,7 @@ tests:
         impact: This certificate has not been ready to serve traffic for at least 10m. If the cert is being renewed or there is another valid cert,
           nginx _may_ be able to serve that instead.
         action: Ensure cert-manager is configured correctly, no lets-encrypt rate limits are being hit. To break glass, buy a cert.
-        dashboard: https://prefix.grafana.example.com/d/TvuRo2iMk/cert-manager
+        dashboard: https://grafana.example.com/d/TvuRo2iMk/cert-manager
 
 # cert-manager rate limits
 - interval: 1m
@@ -110,6 +110,6 @@ tests:
         impact: Depending on the rate limit, cert-manager may be unable to generate certificates for up to a week.
         action: Nothing we can really do in the short term. We can apply for a rate limit adjustment for the future,
           but it can take weeks to approve. Thoughts and prayers.
-        dashboard: https://prefix.grafana.example.com/d/TvuRo2iMk/cert-manager
+        dashboard: https://grafana.example.com/d/TvuRo2iMk/cert-manager
         link_url: https://docs.google.com/forms/d/e/1FAIpQLSetFLqcyPrnnrom2Kw802ZjukDVex67dOM2g4O8jEbfWFs3dA/viewform
         link_text: LetsEncrypt Rate Limit Request Form
