./hack/update-all.sh
Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/pkg/acme/accounts/test/BUILD.bazel
+++ b/pkg/acme/accounts/test/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme/client:go_default_library",
-        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
     ],
 )
 
