--- a/pkg/acme/accounts/BUILD.bazel
+++ b/pkg/acme/accounts/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme/client:go_default_library",
-        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/metrics:go_default_library",
         "//pkg/util:go_default_library",
         "@org_golang_x_crypto//acme:go_default_library",
@@ -22,7 +22,7 @@ go_test(
     srcs = ["registry_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/util/pki:go_default_library",
     ],
 )
