--- a/pkg/apis/certmanager/v1/BUILD.bazel
+++ b/pkg/apis/certmanager/v1/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "const.go",
         "doc.go",
+        "generic_issuer.go",
         "register.go",
         "types.go",
         "types_certificate.go",
