--- a/pkg/controller/acmechallenges/BUILD.bazel
+++ b/pkg/controller/acmechallenges/BUILD.bazel
@@ -13,11 +13,11 @@ go_library(
         "//pkg/acme:go_default_library",
         "//pkg/acme/accounts:go_default_library",
         "//pkg/acme/client:go_default_library",
-        "//pkg/apis/acme/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
-        "//pkg/client/listers/acme/v1alpha2:go_default_library",
-        "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
+        "//pkg/client/listers/acme/v1:go_default_library",
+        "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/acmechallenges/scheduler:go_default_library",
         "//pkg/feature:go_default_library",
@@ -47,8 +47,8 @@ go_test(
     deps = [
         "//pkg/acme/accounts/test:go_default_library",
         "//pkg/acme/client:go_default_library",
-        "//pkg/apis/acme/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/issuer:go_default_library",
