--- a/pkg/issuer/acme/dns/webhook/BUILD.bazel
+++ b/pkg/issuer/acme/dns/webhook/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme/webhook/apis/acme/v1alpha1:go_default_library",
-        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/client/clientset/versioned/scheme:go_default_library",
         "//pkg/logs:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
