--- a/test/e2e/suite/issuers/acme/certificaterequest/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/certificaterequest/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/acme/certificaterequest",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/acme/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/util:go_default_library",
         "//test/e2e/framework:go_default_library",
