--- a/test/e2e/suite/issuers/acme/dnsproviders/BUILD.bazel
+++ b/test/e2e/suite/issuers/acme/dnsproviders/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
     tags = ["manual"],
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/util:go_default_library",
         "//test/e2e/framework/addon/base:go_default_library",
