--- a/test/integration/ctl/BUILD.bazel
+++ b/test/integration/ctl/BUILD.bazel
@@ -15,8 +15,8 @@ go_test(
         "//cmd/ctl/pkg/renew:go_default_library",
         "//cmd/ctl/pkg/status/certificate:go_default_library",
         "//pkg/api/util:go_default_library",
-        "//pkg/apis/acme/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/util/pki:go_default_library",
