Update storage version
Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/deploy/crds/crd-certificaterequests.v1beta1.yaml
+++ b/deploy/crds/crd-certificaterequests.v1beta1.yaml
@@ -49,7 +49,7 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  version: v1alpha2
+  version: v1
   versions:
     - name: v1alpha2
       schema:
@@ -174,7 +174,7 @@ spec:
                   type: string
                   format: date-time
       served: true
-      storage: true
+      storage: false
     - name: v1alpha3
       schema:
         openAPIV3Schema:
@@ -550,7 +550,7 @@ spec:
                   type: string
                   format: date-time
       served: true
-      storage: false
+      storage: true
 status:
   acceptedNames:
     kind: ""
