--- a/deploy/crds/crd-certificates.v1beta1.yaml
+++ b/deploy/crds/crd-certificates.v1beta1.yaml
@@ -52,7 +52,7 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
-  version: v1alpha2
+  version: v1
   versions:
     - name: v1alpha2
       schema:
@@ -326,7 +326,7 @@ spec:
                   description: "The current 'revision' of the certificate as issued. \n When a CertificateRequest resource is created, it will have the `cert-manager.io/certificate-revision` set to one greater than the current value of this field. \n Upon issuance, this field will be set to the value of the annotation on the CertificateRequest resource used to issue the certificate. \n Persisting the value on the CertificateRequest resource allows the certificates controller to know whether a request is part of an old issuance or if it is part of the ongoing revision's issuance by checking if the revision value in the annotation is greater than this field."
                   type: integer
       served: true
-      storage: true
+      storage: false
     - name: v1alpha3
       schema:
         openAPIV3Schema:
@@ -1149,7 +1149,7 @@ spec:
                   description: "The current 'revision' of the certificate as issued. \n When a CertificateRequest resource is created, it will have the `cert-manager.io/certificate-revision` set to one greater than the current value of this field. \n Upon issuance, this field will be set to the value of the annotation on the CertificateRequest resource used to issue the certificate. \n Persisting the value on the CertificateRequest resource allows the certificates controller to know whether a request is part of an old issuance or if it is part of the ongoing revision's issuance by checking if the revision value in the annotation is greater than this field."
                   type: integer
       served: true
-      storage: false
+      storage: true
 status:
   acceptedNames:
     kind: ""
