--- a/test/unit/gen/BUILD.bazel
+++ b/test/unit/gen/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "issuer.go",
         "objectmeta.go",
         "order.go",
+        "route.go",
         "secret.go",
     ],
     importpath = "github.com/jetstack/cert-manager/test/unit/gen",
@@ -20,6 +21,7 @@ go_library(
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/util/pki:go_default_library",
+        "@com_github_openshift_api//route/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/types:go_default_library",
