--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -24,6 +24,7 @@ go_library(
         "//pkg/controller/clusterissuers:go_default_library",
         "//pkg/controller/ingress-shim:go_default_library",
         "//pkg/controller/issuers:go_default_library",
+        "//pkg/controller/routes:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
     ],
