--- a/pkg/controller/BUILD.bazel
+++ b/pkg/controller/BUILD.bazel
@@ -20,6 +20,8 @@ go_library(
         "//pkg/logs:go_default_library",
         "//pkg/metrics:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
+        "@com_github_openshift_client_go//route/clientset/versioned:go_default_library",
+        "@com_github_openshift_client_go//route/informers/externalversions:go_default_library",
         "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
@@ -54,6 +56,7 @@ filegroup(
         "//pkg/controller/clusterissuers:all-srcs",
         "//pkg/controller/ingress-shim:all-srcs",
         "//pkg/controller/issuers:all-srcs",
+        "//pkg/controller/routes:all-srcs",
         "//pkg/controller/test:all-srcs",
     ],
     tags = ["automanaged"],
