--- a/test/e2e/framework/helper/BUILD.bazel
+++ b/test/e2e/framework/helper/BUILD.bazel
@@ -26,6 +26,8 @@ go_library(
         "//test/e2e/framework/helper/validations:go_default_library",
         "//test/e2e/framework/log:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
+        "@com_github_openshift_api//route/v1:go_default_library",
+        "@com_github_openshift_client_go//route/clientset/versioned:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
